
1.1b9
- Fixed behaviour when closing last document
- Fixed undoing vertical moves in score, when there's accidentals
- Fixed incorrect display of triplets in complex songs
- Fixed incorrect note beaming when making notes of different lengths play at the same time

 1.1b8
- Hopefully fixed compatiblity problems with intel Tiger systems
- Fixed crash when importing invalid midis
- More improvements to scons build system
- Fixed undoing shift+up/down in score editor
- Made saving aria files safe : your file is not deleted until the new one is successfully written
- Switched some small variables from int to short
 
 1.1b7
- Improved setting notes sharp/flat/natural to be easier and more flexible
- Made accidentals last entire measure
- Improved note splitting to be wiser
- Made note beaming wiser about how it selects which notes to beam together
- Added italian translation thanks to Gianluca Pignalberi
- When importing midi, remove events from unsupported controllers (fixes some playback bugs)
- Added more midi controllers
- Fixed zooming in songs with multiple time signatures
- Made zooming smoother by removing unneeded renders
- Fixed removing empty tracks in imported midis
- Do not accept empty track names
- switched rendering from plain OpenGL to higher-level primitives, cleaning up code and making it more modular
- Fixed editing time signatures in manual mode
- Fixed rendering of silences in empty measures when using manual time signature management
- Removed useless stuff from .Aria files, making them significantly smaller
- Initial support for a non-OpenGL version (mainly for linux where drivers aren't always there)
- Fixed horizontal scrollbar initially too short

 1.1b6
- fixed crash when removing tempo events
- made it easier to trigger tuning picker in guitar editor
- drum editor : selection now works if click/drag starts on black section header
- more improvements to lightweight vertical scrollbar